--- a/about_company.html
+++ b/about_company.html
@@ -120,7 +120,7 @@
         </div>
         
         <!-- INFO  -->
-        <section class="conpany-info">
+        <div class="conpany-info">
             <div class="container">
                 <div class="conpany-info__wrapper">
                     <div class="conpany-info__content">
@@ -163,7 +163,7 @@
                     </section>
                 </div>
             </div>
-        </section>
+        </div>
     </main>
     <!-- /Main section -->
     
