--- a/index.html
+++ b/index.html
@@ -60,10 +60,8 @@
                         <span>&#9776;</span>
                         <span>&#x2715;</span>
                     </button>
-                    
-                    <nav class="nav" >
                         <ul class="header-bottom__list">
-                            <li class="header-bottom__item header-bottom--acive">
+                            <li class="header-bottom__item header-bottom--active">
                                 <a class="header-bottom__link" href="./index.html">
                                     Main
                                 </a>
