header icon issue corrected

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <span>&#x2715;</span>
                     </button>
                         <ul class="header-bottom__list">
-                            <li class="header-bottom__item header-bottom--active">
+                            <li class="header-bottom__item header-bottom--acive">
                                 <a class="header-bottom__link" href="./index.html">
                                     Main
                                 </a>
